<resources>
    <string name="app_name">MyConverter</string>
    <string name="to">To %1$s</string>
    <string name="result_here">Result here</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="from">From %1$s</string>
    <string name="from_currency">From Currency</string>
    <string name="to_currency">To Currency</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="doge">DOGE</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="vnd">VND</string>
</resources>